feat: Update styling and layout of Header component, add custom fonts, home page layout, and theme switching support.

--- a/website-iwv/src/app/_components/Header/index.module.scss
+++ b/website-iwv/src/app/_components/Header/index.module.scss
@@ -2,6 +2,9 @@
 
 .header {
   padding: var(--base) 0;
+  font-family: "Fira Code", monospace;
+  font-optical-sizing: auto;
+  background: white;
 }
 
 .wrap {
@@ -13,10 +16,12 @@
 
 .logo {
   width: 150px;
+  font-weight: bold;
+  text-decoration: none;
 }
 
-:global([data-theme="light"]) {
-  .logo {
-    filter: invert(1);
+:global([data-theme="dark"]) {
+  .header {
+      background: black;
   }
 }
