--- a/website-iwv/src/app/_components/Footer/index.module.scss
+++ b/website-iwv/src/app/_components/Footer/index.module.scss
@@ -2,8 +2,10 @@
 
 .footer {
   padding: calc(var(--base) * 4) 0;
-  background-color: var(--theme-elevation-1000);
-  color: var(--theme-elevation-0);
+  background-color: black;
+  color: white;
+  font-family: "Fira Code", monospace;
+  font-optical-sizing: auto;
 
   @include small-break {
     padding: calc(var(--base) * 2) 0;
@@ -12,8 +14,8 @@
 
 :global([data-theme="dark"]) {
   .footer {
-    background-color: var(--theme-elevation-50);
-    color: var(--theme-elevation-1000);
+    background-color: black;
+    color: white;
   }
 }
 
@@ -26,6 +28,8 @@
 
 .logo {
   width: 150px;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 .nav {
