--- a/website-iwv/src/app/_home/index.module.scss
+++ b/website-iwv/src/app/_home/index.module.scss
@@ -2,13 +2,26 @@
 
 .container {
     width: 100%;
+    min-height: calc(100vh - 10rem);
     background: white;
+    position: relative;
 }
+
+.canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+  }
 
 .gutter {
     min-height: calc(100vh - 10rem);
     align-items: end;
     display: flex;
+    position: relative;
+    z-index: 2;
 }
 
 .titling {
@@ -17,7 +30,6 @@
     color: black;
     &__title {
         font-size: 6rem;
-        
         position: relative;
         padding-left: 6rem;
         font-family: "Fira Code", monospace;
